tests/errors/recover.js
export function attempt$shouldThrow$(shouldThrow) {
  if (shouldThrow) {
    throw 0;
  }
}
export function recover$shouldThrow$(shouldThrow) {
  unknown_term_type$do_catch_stmt;
}